openjdk23/jdk/test/langtools/tools/javac/annotations/neg/Z12.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

@interface An {
    void a();
}
